v2.0.0
 - Drop support for ruby 2.7
 - Add support for ruby 3.2+
 - Require minimum version of faraday 2.0
 - Disabled request/response logging by default. Old behavior can be restored
   by setting a new `verbose` configuration option to true

v1.6.3
 - Add support for sending end user ip address in request headers

v1.6.2
 - Add support for versioning the RESO Web API

v1.6.1
 - forward port of v1.5.7
 - add addressable as a named runtime dependency (fixes regression from
   v1.5.2)

v1.6.0
 - Adding support for Ruby 3.1
 - Add support for psych 4.0 yaml loading
 - Lock Faraday down to < 2.0

v1.5.7
 - add addressable as a named runtime dependency (fixes regression from
   v1.5.2)

v1.5.6
 - Modify usage of HighLine so that it does not pollute the global namespace

v1.5.5
 - Add logging of an errored oauth2 response

v1.5.4
 - Fix a problem with fetching counts with the http_method_override: true option supplied.

v1.5.3
 - Add support for http_method_override (true/false) option to client, which when supplied results in a POST with appropriate X-HTTP-Method-Override header.

v1.5.2
 - Add dependency of addressable

v1.5.1
 - Add support for video thumbnails and 'media' interface to unify shared parts of videos/virtual tours

v1.5.0
 Why upgrade?
 - Adding support for Ruby 3
 - Relaxed version requirement on json

 Why wait?
 - Minimum version of Faraday brought up to v0.17.3

v1.4.34
 - Version update for releasing v1.4.33 as the tags were set wrong for v1.4.32 release

v1.4.33
 - Add Support for FloPlan extension to Listings

v1.4.32
 - Updated check on Open Houses and Tour of Homes for empty string

v1.4.31
 - Updated requests to allow arrays as a body

v1.4.30
 - added `script/reso_middleware_example.rb`

v1.4.29
 - moved `#logo` from AccountReport to Account

v1.4.28
 - move public_suffix to development dependency where it belongs

v1.4.27
 - Added `dictionary_version` configuration option for RESO requests

v1.4.26